<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        style="@style/H1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:text="@string/hello"
        android:textColor="@color/black" />

    <TextView
        style="@style/H1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="@color/black" />


    <TextView
        style="@style/H4"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_600"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/email" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="3dp"
        android:hint="@string/enter_password"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/H4"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_600"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        app:boxStrokeWidth="3dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_pass"
        style="@style/H5"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginTop="7dp"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="@color/purple_70"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/forget_pass"
        android:layout_marginLeft="5dp" />

    <RelativeLayout
        android:id="@+id/container_all_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <ImageButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/all_btn"
            android:layout_gravity="center">
        </ImageButton>

        <TextView
            android:id="@+id/tv_btn_sign_in"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/H5"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/no_account" />

        <TextView
            android:id="@+id/btnRegister"
            style="@style/H5"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_200"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_up"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

</LinearLayout>