<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_recommended"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="129dp"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/list_bg"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        android:layout_marginTop="3dp">

        <TextView
            android:id="@+id/tvName"
            style="@style/H3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvLokasi"
            style="@style/H6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"/>

        <TextView
            android:id="@+id/tvKategori"
            style="@style/H6"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:text="@string/funding_category"
            android:textColor="@color/purple_200"/>

<!--        <Button-->
<!--            android:id="@+id/btnWA"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            -->
<!--            android:background="@color/design_default_color_secondary_variant"-->
<!--            android:textColor="@color/white"/>-->
        <LinearLayout
            android:gravity="right"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/btnWA"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_vertical"
                android:src="@android:drawable/stat_sys_phone_call"
                android:background="@color/design_default_color_secondary_variant"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>